修改TCP静态获取域名（Release）

--- a/app/src/main/res/values-fr/arrays.xml
+++ b/app/src/main/res/values-fr/arrays.xml
@@ -188,8 +188,8 @@
         <item>Afficher la vidéo locale</item>
     </string-array>
     <array name="lianxi">
-        <item>33 1 57 32 29 29</item>
-        <item>sales@china-siter.com</item>
+        <item>01 55 17 24 50</item>
+        <item>info-assistance@lifeboxsecurity.com</item>
     </array>
     <array name="lock_input">
         <item>Déverrouillage</item>
