--- a/app/src/main/res/values-de/arrays.xml
+++ b/app/src/main/res/values-de/arrays.xml
@@ -188,8 +188,8 @@
         <item>Lokales Video ansehen</item>
     </string-array>
     <array name="lianxi">
-        <item>0574-83007591</item>
-        <item>sales@china-siter.com</item>
+        <item>01 55 17 24 50</item>
+        <item>info-assistance@lifeboxsecurity.com</item>
     </array>
     <array name="lock_input">
         <item>Dietrich</item>
