--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <external-path path="Android/data/com.siterwell.familywell/" name="files_root" />
-    <external-path path="." name="com.siterwell.familywell" />
+    <external-path path="Android/data/com.siterwell.lifebox/" name="files_root" />
+    <external-path path="." name="com.siterwell.lifebox" />
 </paths>
