[what]手动选择服务区域功能完成

--- a/app/src/main/res/layout/activity_server_list.xml
+++ b/app/src/main/res/layout/activity_server_list.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:layout_height="match_parent">
 
-            <me.hekr.sthome.commonBaseView.SlideListView
+            <ListView
                 android:divider="@null"
                 android:id="@+id/eqlist"
                 android:layout_width="match_parent"
