--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,11 +12,12 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/switch_lan"
-        android:textColor="@color/text_color_selected"
-        android:text="@string/switch_lan"
+        android:id="@+id/switch_region"
         android:background="@null"
-        android:visibility="gone"/>
+        android:text="@string/choose_server"
+        android:textColor="@color/text_color_selected"
+        android:layout_marginRight="@dimen/LargePadding"
+        android:layout_marginTop="@dimen/SmallPadding"/>
 </LinearLayout>
     <ImageView
         android:id="@+id/imageView1"
