--- a/app/src/main/res/layout/activity_before_config_esptouch.xml
+++ b/app/src/main/res/layout/activity_before_config_esptouch.xml
@@ -15,18 +15,24 @@
                 android:layout_height="220dp"
                 android:layout_marginBottom="10dp"
                 android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal" android:layout_marginTop="40dp"/>
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="40dp"/>
 
             <TextView
+                android:id="@+id/ap_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/config_instruction"
                 android:textColor="@color/black"
-                android:textSize="@dimen/content_size"/>
+                android:textSize="@dimen/content_size"
+                android:gravity="center"/>
 
             <TextView
+                android:id="@+id/ap_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:gravity="center"
                 android:text="@string/how_to_config"
                 android:textColor="@color/device_warn"
                 android:textSize="@dimen/title_size" />
