优化AP配网功能和页面适配

--- a/app/src/main/res/layout/activity_esp_animation.xml
+++ b/app/src/main/res/layout/activity_esp_animation.xml
@@ -1,52 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal">
-
-    <me.hekr.sthome.commonBaseView.RoundProgressView
-        android:id="@+id/roundprogress"
+    android:layout_height="match_parent">
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp" />
-
-    <TextView
-        android:id="@+id/tishi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginLeft="@dimen/NormalPadding"
-        android:layout_marginRight="@dimen/NormalPadding"/>
-
-    <TextView
-        android:id="@+id/fail_reason"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_centerInParent="true"
-        android:gravity="center_vertical"/>
-
-    <Button
-        android:textAllCaps="false"
-        android:id="@+id/retry"
-        android:text="@string/retry"
-        android:textSize="@dimen/addsys_bottom_text_size"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:visibility="gone"
-        android:background="@drawable/modle_done"
-        android:textColor="@color/white"/>
-
-    <Button
-        android:textAllCaps="false"
-        android:id="@+id/ap_config"
-        android:text="@string/ap_connect"
-        android:textSize="@dimen/addsys_bottom_text_size"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:visibility="gone"
-        android:background="@drawable/modle_done"
-        android:textColor="@color/white"/>
+        android:layout_height="0dp"
+        android:layout_weight="1">
+        <me.hekr.sthome.commonBaseView.CustomStatusView
+            android:id="@+id/roundprogress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:padding="3dp"
+            app:progress_radius="80dp"
+            app:progress_width="5dp"/>
+        <TextView
+            android:id="@+id/progress_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:textColor="@color/text_title"
+            android:layout_centerInParent="true"/>
+    </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/tishi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginLeft="@dimen/NormalPadding"
+            android:layout_marginRight="@dimen/NormalPadding"/>
+        <TextView
+            android:id="@+id/fail_reason"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center_vertical"/>
+        <Button
+            android:textAllCaps="false"
+            android:id="@+id/retry"
+            android:text="@string/retry"
+            android:textSize="@dimen/addsys_bottom_text_size"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:visibility="gone"
+            android:background="@drawable/modle_done"
+            android:textColor="@color/white"/>
+        <Button
+            android:textAllCaps="false"
+            android:id="@+id/ap_config"
+            android:text="@string/ap_connect"
+            android:textSize="@dimen/addsys_bottom_text_size"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:visibility="gone"
+            android:background="@drawable/modle_done"
+            android:textColor="@color/white"/>
+    </LinearLayout>
 </LinearLayout>
