【release】更新日志: 修复打包引起的文件错误，发布版本。

--- a/app/src/main/res/layout/activity_qr_scan.xml
+++ b/app/src/main/res/layout/activity_qr_scan.xml
@@ -7,8 +7,7 @@
     <RelativeLayout
         android:id="@+id/captureViewLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/layoutTop" >
+        android:layout_height="match_parent" >
 
         <SurfaceView
             android:id="@+id/capture_preview"
