--- a/app/src/main/res/layout/activity_pic_setting_expert.xml
+++ b/app/src/main/res/layout/activity_pic_setting_expert.xml
@@ -5,9 +5,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@id/layoutTop"
-        >
+        android:orientation="vertical">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/item_height"
