--- a/app/src/main/res/layout/activity_pic_setting_info.xml
+++ b/app/src/main/res/layout/activity_pic_setting_info.xml
@@ -9,9 +9,7 @@
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/layoutTop"
-        android:layout_margin="10dp"
-        />
+        android:layout_margin="10dp" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
