--- a/app/src/main/res/layout/activity_before_config_esptouch.xml
+++ b/app/src/main/res/layout/activity_before_config_esptouch.xml
@@ -57,7 +57,7 @@
             android:id="@+id/loadingView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/add_n_group_padding"
+            android:layout_marginTop="60dp"
             app:z_color="@color/text_color_selected"
             android:visibility="gone"/>
     </LinearLayout>
