--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -6,28 +6,27 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scrollbars="none"
         android:background="@color/back_config">
         <LinearLayout
-            android:orientation="vertical" android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:padding="@dimen/NormalPadding"
-            android:background="@color/back_config"
-            >
-
+            android:background="@color/back_config">
             <ImageView
                 android:id="@+id/imageView1"
-                android:layout_width="200dp"
-                android:layout_height="180dp"
-                android:layout_marginBottom="10dp"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/login_logo" android:layout_gravity="center_horizontal" android:layout_marginTop="40dp"/>
-
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="32dp"
+                android:src="@drawable/login_logo"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="32dp"/>
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp">
+                android:layout_height="wrap_content">
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
@@ -38,13 +37,11 @@
                     android:orientation="vertical"
                     android:paddingLeft="@dimen/NormalPadding"
                     android:paddingRight="@dimen/NormalPadding">
-
                     <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:gravity="center">
-
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -52,7 +49,6 @@
                             android:minHeight="@dimen/SmallListHeight"
                             android:paddingLeft="@dimen/SmallPadding"
                             android:orientation="vertical">
-
                             <TextView
                                 android:id="@+id/guanwang"
                                 style="@style/CCPFontPreferenceLarge"
@@ -61,16 +57,12 @@
                                 android:layout_weight="1.0"
                                 android:singleLine="true" />
                         </LinearLayout>
-
                     </LinearLayout>
-
                     <View
                         android:layout_width="fill_parent"
                         android:layout_height="1px"
                         android:background="@color/list_divider" />
-
                 </LinearLayout>
-
                 <me.hekr.sthome.commonBaseView.SettingItem
                     android:id="@+id/app_version"
                     android:layout_width="match_parent"
@@ -78,8 +70,6 @@
                     app:item_accessoryType = "none"
                     app:item_showDivider="true"
                     app:item_titleText="@string/app_version_hint" />
-
-
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
@@ -91,12 +81,10 @@
                     android:paddingLeft="@dimen/NormalPadding"
                     android:paddingRight="@dimen/NormalPadding"
                     android:id="@+id/downing">
-
                     <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
-
                         <LinearLayout
                             android:id="@+id/content"
                             android:layout_width="wrap_content"
@@ -105,7 +93,6 @@
                             android:minHeight="@dimen/SmallListHeight"
                             android:paddingLeft="@dimen/SmallPadding"
                             android:orientation="vertical">
-
                             <TextView
                                 android:id="@android:id/title"
                                 style="@style/CCPFontPreferenceLarge"
@@ -124,16 +111,12 @@
                             android:max="100"
                             android:progress="0" />
                     </LinearLayout>
-
                     <View
                         android:id="@+id/item_bottom_divider"
                         android:layout_width="fill_parent"
                         android:layout_height="1px"
                         android:background="@color/list_divider" />
-
                 </LinearLayout>
-
-
                 <me.hekr.sthome.commonBaseView.SettingItem
                     android:id="@+id/gateway_version"
                     android:layout_width="match_parent"
@@ -141,24 +124,38 @@
                     app:item_accessoryType = "none"
                     app:item_showDivider="true"
                     app:item_titleText="@string/gateway_version_hint" />
-
-
+                <me.hekr.sthome.commonBaseView.SettingItem
+                    android:id="@+id/user_agreement"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:item_accessoryType = "arrow"
+                    app:item_showDivider="true"
+                    app:item_detailText = ""
+                    app:item_titleText="@string/user_agreement_hint" />
+                <me.hekr.sthome.commonBaseView.SettingItem
+                    android:id="@+id/privacy_policy"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:item_accessoryType = "arrow"
+                    app:item_showDivider="true"
+                    app:item_detailText = ""
+                    app:item_titleText="@string/privacy_policy_hint" />
                 <me.hekr.sthome.commonBaseView.SettingItem
                     android:id="@+id/sale"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:item_accessoryType = "arrow"
                     app:item_showDivider="false"
+                    app:item_detailText = ""
                     app:item_titleText="@string/sale_number" />
             </LinearLayout>
-
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text=""
                 android:singleLine="false"
                 android:lineSpacingExtra="@dimen/SmallPadding"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="32dp"
                 android:id="@+id/intro"/>
         </LinearLayout>
     </ScrollView>
