--- a/app/src/main/res/layout/activity_init.xml
+++ b/app/src/main/res/layout/activity_init.xml
@@ -5,24 +5,21 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:id="@+id/root">
-
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="200dp"
-        android:layout_height="180dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_gravity="center_horizontal"
         android:alpha="0.0"
         android:src="@drawable/login_logo" />
-
     <me.hekr.sthome.commonBaseView.loadingView.ZLoadingView
         android:id="@+id/loadingView_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:z_color="@color/text_color_selected"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/imageView1"/>
-
-
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="32dp"/>
 </RelativeLayout>
