--- a/app/src/main/res/layout/view_cycle_viewpager_indicator.xml
+++ b/app/src/main/res/layout/view_cycle_viewpager_indicator.xml
@@ -3,12 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
     <TextView
-         android:id="@+id/image_indicator"
-         android:layout_width="7dp"
-         android:layout_height="7dp"
-         android:background="@drawable/indicator_viewpager"
-         android:layout_gravity="center_vertical" />
-
+        android:id="@+id/image_indicator"
+        android:layout_width="8dp"
+        android:layout_height="8dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="3dp"
+        android:background="@drawable/indicator_viewpager"
+        android:layout_gravity="center_vertical" />
 </LinearLayout>
