[what]主题颜色变为红色，首页增加子设备列表显示viewpager控件重写

--- a/app/src/main/res/drawable/video_control_seekbar_bg.xml
+++ b/app/src/main/res/drawable/video_control_seekbar_bg.xml
@@ -12,7 +12,7 @@
         <clip>
             <shape>
                 
-                <solid android:color="@color/bg_seekbar" />
+                <solid android:color="@color/text_color_selected" />
 
                 <corners android:radius="3dp" />
             </shape>
