--- a/app/src/main/res/layout/ipc_setting_item.xml
+++ b/app/src/main/res/layout/ipc_setting_item.xml
@@ -62,6 +62,7 @@
             android:progressDrawable="@drawable/video_control_seekbar_bg"
             android:maxHeight="5dp"
             android:minHeight="5dp"
+            android:thumb="@drawable/selector_thumb_bar"
             android:visibility="visible"/>
 
             <ImageView
@@ -91,7 +92,7 @@
                 android:layout_width="50dp"
                 android:layout_height="25dp"
                 android:layout_gravity="center_vertical"
-                android:background="@drawable/bg_switch"
+                android:background="@drawable/icon_switch_check"
                 android:button="@null"
                 android:checked="false"
                 android:layout_alignParentRight="true"
