--- a/app/src/main/res/layout/view_banner_weather.xml
+++ b/app/src/main/res/layout/view_banner_weather.xml
@@ -19,7 +19,8 @@
             android:layout_height="20dp"
             android:layout_centerInParent="true"
             android:src="@mipmap/gps"
-            android:id="@+id/gps_icon"/>
+            android:id="@+id/gps_icon"
+            android:visibility="gone"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="20dp"
