--- a/app/src/main/res/layout/view_device_list.xml
+++ b/app/src/main/res/layout/view_device_list.xml
@@ -8,11 +8,14 @@
     android:clickable="true"
     android:focusable="true">
 
-    <android.support.v7.widget.RecyclerView
+    <me.hekr.sthome.commonBaseView.RecyclerViewEmptySupport
         android:id="@+id/rv_device_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:clickable="false"/>
-
+    <include
+        android:id="@+id/empty"
+        android:visibility="gone"
+        layout="@layout/empty_view" />
 </FrameLayout>
